--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,8 @@ body {
 
 /* SIDEBAR //////////////////////////////////////////////////////////////////////////*/
 
+#toggle_sidebar { display: none; }
+
 #sidebar {
 	float: left;
 	width: 200px;
